--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -998,7 +998,7 @@ msgid "command_quit"
 msgstr "Disconnect from the IRC server"
 
 #: Connect to a new IRC network
-msgid "command_connect"
+msgid "command_server"
 msgstr "Connect to a new IRC network"
 
 #: Request information on somebody
